src-ken&y/objects/Transaction_Matching_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Threshold__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount Threshold +/-</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Transaction Matching Rules</relationshipLabel>
        <relationshipName>Transaction_Matching_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Transaction Matching Rules</relationshipLabel>
        <relationshipName>Transaction_Matching_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Days the transaction date can be approximated.</description>
        <inlineHelpText>Number of Days the transaction date can be approximated.</inlineHelpText>
        <label>Date Threshold (Days) +/-</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>IF(!IsBlank(Company__r.Name), &apos;For &apos;+ Company__r.Name+&apos;,&apos;,NULL) + IF(!IsBlank(Bank_Account__r.Name), &apos;For &apos;+ Bank_Account__r.Name+&apos;,&apos;,NULL) + IF(!IsBlank(Documents__c), &apos; For &apos;,NULL) + IF(INCLUDES( Documents__c, &quot;Customer Receipts&quot;), &quot; Customer Receipts,&quot;, NULL) + IF(INCLUDES( Documents__c , &quot;Supplier Payments&quot;), &quot;Supplier Payments,&quot;, NULL)  + IF(INCLUDES( Documents__c, &quot;Payments&quot;), &quot;Payments&quot;, NULL) + IF(INCLUDES( Documents__c, &quot;Journal Entry Lines&quot;), &quot;Journal Entry Lines&quot;, NULL) + IF(Amount__c &amp;&amp; IsBlank(Amount_Threshold__c),&apos;, Match on Amount&apos; , NULL) + IF(!IsBlank(Amount_Threshold__c) &amp;&amp; Amount__c, &apos;, Match on Amount(+/-  &apos;+ Text(Amount_Threshold__c)+&apos;$)&apos;,NULL) + IF(Transaction_Date__c &amp;&amp; IsBlank(Date_Threshold__c),&apos;, Match on Transaction Date&apos; , NULL ) + IF(!IsBlank(Date_Threshold__c) &amp;&amp; Transaction_Date__c, &apos;, Match on Transaction Date(+/-  &apos;+ Text(Date_Threshold__c) +&apos; days)&apos;,NULL) +   IF(Reference__c,&apos;, Match on Reference Number&apos;,NULL) + IF(Transacted_With__c,&apos;, Match on Transacted With&apos;,NULL) + IF(Keep_In_Match_Pool__c,&apos;, Keep in Match Pool&apos;,&apos;, Do not Keep in Match Pool&apos;) + IF(Auto_Approve__c,&apos;, Auto Approve&apos;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <label>Documents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Receipts</fullName>
                </value>
                <value>
                    <fullName>Supplier Payments</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Journal Entry Lines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>For_Amount_Threshold__c</fullName>
        <defaultValue>&apos;0.00&apos;</defaultValue>
        <description>This Field hold the Amount Threshold as a Text Value.</description>
        <label>For Amount Threshold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Date_Threshold_Days__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>This field hold the Text value of the Date Threshold</description>
        <label>For Date Threshold (Days)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <description>To Validate if the bank transaction matching rule is active or not.</description>
        <formula>and(Start_Date__c &lt;= now()  ,  or( ISBLANK(End_Date__c) ,(End_Date__c &gt;now())))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_In_Match_Pool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If only one source doc is found as a match for a Bank Transaction, then matching source doc is removed from match pool, unless &quot;Keep In Match Pool&quot; is checked.</description>
        <label>Keep In Match Pool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank_Key__c</fullName>
        <description>This stores a key of Company, Bank Account and rank to ensure uniqueness.</description>
        <label>Rank Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transacted_With__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transacted With</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Date</label>
        <type>Checkbox</type>
    </fields>
    <label>Bank Transaction Match Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Bank_Account__c</columns>
        <columns>Rank__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Auto_Approve__c</columns>
        <columns>Amount_Threshold__c</columns>
        <columns>Date_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Transaction Match Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_Threshold_Cannot_be_Negative</fullName>
        <active>true</active>
        <description>Amount Threshold value cannot be a negative amount.</description>
        <errorConditionFormula>Amount_Threshold__c &lt; 0.00</errorConditionFormula>
        <errorMessage>Amount Threshold cannot be a negative value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Atleast_one_matching_criteria_Selection</fullName>
        <active>true</active>
        <description>To set a Bank Transaction Matching Rule, atleast one matching criteria should be selected.</description>
        <errorConditionFormula>AND( NOT(Amount__c),AND(NOT(ISBLANK(Amount_Threshold__c)), Amount_Threshold__c == 0.00),NOT(Transaction_Date__c),AND(NOT(ISBLANK(Date_Threshold__c)), Date_Threshold__c == 0),NOT(Auto_Approve__c),NOT(Keep_In_Match_Pool__c),NOT(Auto_Approve__c), NOT(Transacted_With__c),NOT(Reference__c))</errorConditionFormula>
        <errorMessage>Atleast one Matching Criteria should be added to the rule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_Association_with_Company</fullName>
        <active>true</active>
        <description>Bank Account should be associated with the company selected on the Bank Transaction Matching Rules.</description>
        <errorConditionFormula>OR(ISNULL(Bank_Account__c), AND(NOT(ISBLANK(Bank_Account__c)),(Company__c !=  Bank_Account__r.Company__c)))</errorConditionFormula>
        <errorMessage>Bank Account is not associated with the company.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_CheckBoth_AutoApprove_KeepMatchPL</fullName>
        <active>true</active>
        <description>Both Auto Approve and Keep in Match Pool can be set both for the Matching Rule.</description>
        <errorConditionFormula>AND(Auto_Approve__c,Keep_In_Match_Pool__c)</errorConditionFormula>
        <errorMessage>Cannot set both Keep in Match Pool and Auto Approve.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Threshold_Cannot_be_Negative</fullName>
        <active>true</active>
        <description>Date Threshold value cannot be negative days.</description>
        <errorConditionFormula>Date_Threshold__c &lt; 0</errorConditionFormula>
        <errorMessage>Date Threshold cannot be a negative value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Documents_are_Required</fullName>
        <active>true</active>
        <description>Atleast one document is required.</description>
        <errorConditionFormula>ISNULL(Documents__c)</errorConditionFormula>
        <errorMessage>Atleast one Document is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Select_Amount_Matching_Criteria</fullName>
        <active>true</active>
        <description>Amount threshold can be set only if the amount matching criteria is checked.</description>
        <errorConditionFormula>AND(NOT(Amount__c),AND(NOT(ISBLANK(Amount_Threshold__c)), Amount_Threshold__c != 0.00))</errorConditionFormula>
        <errorMessage>Amount threshold can only be set if the Amount matching criteria is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Select_Transaction_Date_Criteria</fullName>
        <active>true</active>
        <description>Days threshold can be set only if the transaction date matching criteria is checked.</description>
        <errorConditionFormula>AND(NOT(Transaction_Date__c),AND(NOT(ISBLANK(Date_Threshold__c)), Date_Threshold__c != 0))</errorConditionFormula>
        <errorMessage>Days threshold can only be set if the Transaction Date matching criteria is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_is_Required</fullName>
        <active>true</active>
        <description>Start Date is required.</description>
        <errorConditionFormula>ISNULL(Start_Date__c )</errorConditionFormula>
        <errorMessage>Start Date is required.</errorMessage>
    </validationRules>
</CustomObject>